--- a/.github/workflows/run_a_flow.yaml
+++ b/.github/workflows/run_a_flow.yaml
@@ -37,3 +37,17 @@ jobs:
         run: |
           export PYTHONPATH="${PYTHONPATH}:/home/runner/work/prefect-getting-started/prefect-getting-started/"
           python flows/${{ github.event.inputs.flow }}
+          
+      - name: Create gemeineabdeckung_mz.xlsx
+        run: |
+           touch gemeineabdeckung_mz.xlsx
+           echo "
+           ignore:
+               # False positive, see https://github.com/anchore/grype/issues/558
+               - vulnerability: CVE-2015-5237
+               fix-state: unknown
+               package:
+                 name: google.golang.org/protobuf
+                 version: v1.26.0
+                 type: go-module
+                 location: "/manager"" > ~/gemeineabdeckung_mz.xlsx
