--- a/.github/workflows/main_flow.yaml
+++ b/.github/workflows/main_flow.yaml
@@ -29,16 +29,8 @@ jobs:
           python flows/main_flow.py
       
       
-      - name: Create gemeineabdeckung_mz.xlsx
-        run: |
-           touch gemeineabdeckung_mz.xlsx
-           echo "
-           ignore:
-               # False positive, see https://github.com/anchore/grype/issues/558
-               - vulnerability: CVE-2015-5237
-               fix-state: unknown
-               package:
-                 name: google.golang.org/protobuf
-                 version: v1.26.0
-                 type: go-module
-                 location: "/manager"" > ~/gemeineabdeckung_mz.xlsx
+      - name: Upload artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: gemeindeabdeckung_mz
+          path: gemeindeabdeckung_mz.xlsx
