--- a/.github/workflows/run_a_flow.yaml
+++ b/.github/workflows/run_a_flow.yaml
@@ -38,8 +38,20 @@ jobs:
           export PYTHONPATH="${PYTHONPATH}:/home/runner/work/prefect-getting-started/prefect-getting-started/"
           python flows/${{ github.event.inputs.flow }}
           
-      - name: Upload artifact
-        uses: actions/upload-artifact@v2
+      
+      - name: Check out repository
+        uses: actions/checkout@v2
         with:
-          name: gemeindeabdeckung_mz
-          path: gemeindeabdeckung_mz.xlsx
+          persist-credentials: false
+
+      - name: Set up Git
+        run: |
+          git config --global user.name "GitHub Actions Bot"
+          git config --global user.email "actions@users.noreply.github.com"
+
+      - name: Create and save file
+        run: |
+          echo "Timestamp: $(date)" > gemeindeabdeckung.csv
+          git add gemeindeabdeckung.csv
+          git commit -m "Add timestamp file"
+          git push
