--- a/.github/workflows/run_a_flow.yaml
+++ b/.github/workflows/run_a_flow.yaml
@@ -47,7 +47,7 @@ jobs:
       - name: Set up Git
         run: |
           git config --global user.name "GitHub Actions Bot"
-          git config --global user.email "actions@users.noreply.github.com"
+          git config --global user.email "katharina.eichinger@mittelbayerische.de"
 
       - name: Create and save file
         run: |
