--- a/.github/workflows/run_a_flow.yaml
+++ b/.github/workflows/run_a_flow.yaml
@@ -23,18 +23,21 @@ jobs:
         uses: actions/setup-python@v3
         with:
           python-version: 3.9
-
+          
       - name: Python dependencies
         run: |
-          pip install -U prefect==${{ github.event.inputs.prefect-version }}
+          pip install -U prefect==2.*
           pip install -r requirements.txt
-
       - name: Prefect Cloud login
         run: |
           prefect config set PREFECT_API_KEY=${{secrets.PREFECT_API_KEY}} 
           prefect cloud workspace set --workspace "${{secrets.PREFECT_WORKSPACE}}"
-      - name: Run the flow
+      - name: Google Credentials
+        run: |
+          pip install google-auth google-auth-oauthlib google-auth-httplib2 google-api-python-client pandas gspread gspread_dataframe
+      - name: main_flow
+        env:
+          GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
         run: |
           export PYTHONPATH="${PYTHONPATH}:/home/runner/work/prefect-getting-started/prefect-getting-started/"
-          python flows/${{ github.event.inputs.flow }}
-          
+          python flows/main_flow.py
