--- a/.github/workflows/run_a_flow.yaml
+++ b/.github/workflows/run_a_flow.yaml
@@ -38,9 +38,10 @@ jobs:
 
       - name: Set up Google API credentials
         env:
-          GOOGLE_CREDENTIALS_BASE64: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
+          GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
         run: |
-          echo "GOOGLE_APPLICATION_CREDENTIALS=$(echo "$GOOGLE_CREDENTIALS_BASE64" | base64 --decode)" >> $GITHUB_ENV
+          echo "$GOOGLE_APPLICATION_CREDENTIALS" > credentials.json
+          export GOOGLE_APPLICATION_CREDENTIALS=credentials.json
       - name: main_flow
         run: |
           export PYTHONPATH="${PYTHONPATH}:/home/runner/work/prefect-getting-started/prefect-getting-started/"
