--- a/.github/workflows/main_flow.yaml
+++ b/.github/workflows/main_flow.yaml
@@ -24,11 +24,9 @@ jobs:
           prefect config set PREFECT_API_KEY=${{secrets.PREFECT_API_KEY}} 
           prefect cloud workspace set --workspace "${{secrets.PREFECT_WORKSPACE}}"
           
-      - name: Google Credentials
-        run: |
-          pip install google-auth google-auth-oauthlib google-auth-httplib2 google-api-python-client pandas gspread gspread_dataframe
-
-      - name: Run Python script
+      - name: Save DataFrame to Google Sheet
         env:
           GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
-        run: python flows/main_flow.py
+        run: |
+          echo "$GOOGLE_APPLICATION_CREDENTIALS" | base64 --decode > credentials.json
+          python flows/main_flow.py
