--- a/.github/workflows/run_a_flow.yaml
+++ b/.github/workflows/run_a_flow.yaml
@@ -28,6 +28,8 @@ jobs:
         run: |
           pip install -U prefect==2.*
           pip install -r requirements.txt
+          pip install gspread google-auth google-auth-oauthlib google-auth-httplib2 gspread-dataframe
+
       - name: Prefect Cloud login
         run: |
           prefect config set PREFECT_API_KEY=${{secrets.PREFECT_API_KEY}} 
